--- a/src/components/MyProperties/MyProperties.css
+++ b/src/components/MyProperties/MyProperties.css
@@ -81,7 +81,7 @@
     margin-top: 5px;
 }
 
-.send-message-btn {
+.myproperties-message-btn {
     background-color: #f5b642;
     color: #121212;
     border: none;
